2003-08-06  Andreas Kupries  <andreask@activestate.com>

	* cmdline.tcl (getfiles): Corrected a bogus attempt to quote
	  backslashes in file patterns on the windows platform.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* typedCmdline.tcl: Fixed bug #614591. See also last entry, this
	  file was forgotten.

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* cmdline.tcl:
	* cmdline.man: Fixed bug #648679. Fixed bug #614591. Set version
	  of the package to to 1.2.1

	* urn-scheme.tcl: Fixed bug #614591. Set version
	  of the package to to 1.2.1

2003-02-23  David N. Welton  <davidw@dedasys.com>

	* cmdline.tcl (cmdline::getfiles): Use string map instead of
	regsub.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* typeCmdline.tcl: Updated 'info exist' to 'info exists'.

2002-04-24  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Applied patch #540313 on behalf of Melissa Chawla
	  <melissachawla@yahoo.com> and Don Porter
	  <dgp@users.sourceforge.net>.

	  * cmdline.test: 
	  * cmdline.tcl: Added getKnownOpt and getKnownOptions procedures
	    to the API.  The procedures offer a way for arguments that are
	    not in the optionList to be ignored.  This way, you can have
	    two independant locations in your application where
	    commandline arguments are parsed.  I bumped the package
	    version to 1.2.

	* cmdline.man: Updated documentation.

2002-04-14  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* cmdline.man: Added doctools manpage.

2001-10-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* cmdline.n:
	* cmdline.tcl:
	* pkgIndex.tcl: Version up to 1.1.1

2001-10-12  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* cmdline.tcl: Corrected the inline documentation to reflect what